added clear function

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <button class = button>Etch a Sketch Size</button>
+    <button class = clear>Clear</button>
    <div id = "board">
    
     </div>
